...
                  .frame(maxWidth: .infinity)
                  .padding()
                  .background(Colors.General.LightestAccentColor)
                }
              }
            }
            .accessibilityIdentifier("ProductsSearchList")
            .searchable(text: $searchText)
          } else if home.brands == nil {
            EmptyView(title: "No brands")
          } else {
            CustomLoadingView()
          }
...
